--- a/index.html
+++ b/index.html
@@ -3235,11 +3235,11 @@
         </div>
         <!-- main footer -->
         <div class="flex flex-col md:flex-row md:justify-between justify-center md:items-start my-5 gap-10 md:text-start text-center">
-            <section class="flex flex-col justify-center gap-2 mx-auto whitespace-nowrap">
-                <h4 class="text-black md:text-[22px] text-[20px]">
+            <section class="flex flex-col gap-2 whitespace-nowrap">
+                <h4 class="text-black md:text-[22px] text-[18px]">
                     خرید
                 </h4>
-                <ul class="text-[18px] text-center text-stone-500 md:block grid grid-cols-2 md:space-y-1 gap-y-2 gap-x-10">
+                <ul class="md:text-[18px] text-[16px] text-center text-stone-500 md:block grid grid-cols-2 md:space-y-1 gap-y-2 gap-x-10">
                     <li><a href="#">
                         زنانه
                     </a></li>
@@ -3260,11 +3260,11 @@
                     </a></li>
                 </ul>
             </section>
-            <section class="flex flex-col justify-center gap-2 mx-auto whitespace-nowrap">
-                <h4 class="text-black md:text-[22px] text-[20px]">
+            <section class="flex flex-col  gap-2 whitespace-nowrap">
+                <h4 class="text-black md:text-[22px] text-[18px]">
                     خدمات مشتریان
                 </h4>
-                <ul class="text-[18px] text-center text-stone-500 md:block grid grid-cols-2 md:space-y-1 gap-y-2 gap-x-10">
+                <ul class="md:text-[18px] text-[16px] text-center text-stone-500 md:block grid grid-cols-2 md:space-y-1 gap-y-2 gap-x-10">
                     <li><a href="#">
                         پاسخ به پرسش های متداول
                     </a></li>
@@ -3279,11 +3279,11 @@
                     </a></li>
                 </ul>
             </section>
-            <section class="flex flex-col justify-center gap-2 mx-auto whitespace-nowrap">
-                <h4 class="text-black md:text-[22px] text-[20px]">
+            <section class="flex flex-col gap-2 whitespace-nowrap">
+                <h4 class="text-black md:text-[22px] text-[18px]">
                     اطلاعات دیجی‌استایل
                 </h4>
-                <ul class="text-[18px] text-center text-stone-500 md:block grid grid-cols-2 md:space-y-1 gap-y-2 gap-x-10">
+                <ul class="md:text-[18px] text-[16px] text-center text-stone-500 md:block grid grid-cols-2 md:space-y-1 gap-y-2 gap-x-10">
                     <li><a href="#">
                         درباره دیجی‌استایل
                     </a></li>
@@ -3296,7 +3296,7 @@
                 </ul>
             </section>
             <section class="flex flex-col justify-center items-center gap-8">
-                <span class="md:text-[22px] text-[20px]">
+                <span class="md:text-[22px] text-[18px]">
                     تلفن پشتیبانی : ۶۱۹۳۰۳۰۰-۰۲۱
                 </span>
                 <section class="flex justify-center gap-5">
@@ -3327,7 +3327,7 @@
         </div>
         <!-- download -->
         <div class="flex flex-col md:flex-row justify-between items-center my-10 border-b-1 pb-2 gap-5">
-           <span class="md:text-[20px] text-[18px] whitespace-nowrap">
+           <span class="md:text-[20px] text-[16px] whitespace-nowrap">
             دانلود اپلیکیشن دیجی‌استایل
            </span>
            <section class="grid md:grid-cols-4 grid-cols-2 gap-3">
@@ -3360,7 +3360,7 @@
         <!-- info -->
         <div class="flex flex-col md:flex-row justify-between items-start">
             <section class="w-full md:w-3/5">
-                <h4 class="md:text-[20px] text-[18px]">
+                <h4 class="md:text-[20px] text-[16px]">
                     فروشگاه اینترنتی مد و لباس دیجی‌استایل
                 </h4>
                 <p id="info-paragraph" class="md:text-[16px] text-[14px] text-stone-500 line-clamp-3">
@@ -3381,10 +3381,10 @@
                 </button>
             </section>
             <section class="flex w-full md:w-auto justify-center items-center md:p-0 my-5 gap-5">
-                <img class="border border-stone-300 p-2 rounded block" src="images/logo/namad.png" alt="">
-                <img class="border border-stone-300 p-2 rounded block" src="images/logo/namad.png" alt="">
-                <img class="border border-stone-300 p-2 rounded block" src="images/logo/namad.png" alt="">
-                <img class="border border-stone-300 p-2 rounded block" src="images/logo/namad.png" alt="">
+                <a href="#"><img class="w-15 p-1 block" src="images/logo/namad.png" alt=""></a>
+                <a href="#"><img class="w-15 p-1 block" src="images/logo/namad.png" alt=""></a>
+                <a href="#"><img class="w-15 p-1 block" src="images/logo/namad.png" alt=""></a>
+                <a href="#"><img class="w-15 p-1 block" src="images/logo/namad.png" alt=""></a>
             </section>
         </div>
         <!-- last footer -->
