--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </section>
             <!-- select title -->
             <section class="my-10 flex flex-col gap-5">
-                <button id="menu-mobile-btn-zanane" class="flex justify-between items-center w-full h-20 text-[24px] flex items-center pr-5 bg-pink-600 text-white">
+                <button id="menu-mobile-btn-zanane" class="flex justify-between items-center w-full h-20 text-[24px] pr-5 bg-pink-600 text-white">
                     <span>
                         زنانـه
                     </span>
@@ -66,7 +66,7 @@
                         </svg>
                     </span>
                 </button>
-                <button id="menu-mobile-btn-mardane" class="flex justify-between items-center w-full h-20 text-[24px] flex items-center pr-5 bg-blue-600 text-white">
+                <button id="menu-mobile-btn-mardane" class="flex justify-between items-center w-full h-20 text-[24px] pr-5 bg-blue-600 text-white">
                     <span>
                         مردانـه
                     </span>
@@ -76,7 +76,7 @@
                         </svg>
                     </span>
                 </button>
-                <button id="menu-mobile-btn-bachegane" class="flex justify-between items-center w-full h-20 text-[24px] flex items-center pr-5 bg-yellow-600 text-white">
+                <button id="menu-mobile-btn-bachegane" class="flex justify-between items-center w-full h-20 text-[24px] pr-5 bg-yellow-600 text-white">
                     <span>
                         بچگانـه
                     </span>
@@ -86,7 +86,7 @@
                         </svg>
                     </span>
                 </button>
-                <button id="menu-mobile-btn-varzesh" class="flex justify-between items-center w-full h-20 text-[24px] flex items-center pr-5 bg-red-600 text-white">
+                <button id="menu-mobile-btn-varzesh" class="flex justify-between items-center w-full h-20 text-[24px] pr-5 bg-red-600 text-white">
                     <span>
                         ورزشی
                     </span>
@@ -96,7 +96,7 @@
                         </svg>
                     </span>
                 </button>
-                <button id="menu-mobile-btn-varzesh" class="flex justify-between items-center w-full h-20 text-[24px] flex items-center pr-5 bg-green-600 text-white">
+                <button id="menu-mobile-btn-varzesh" class="flex justify-between items-center w-full h-20 text-[24px] pr-5 bg-green-600 text-white">
                     <span>
                         زیبایی و سلامت
                     </span>
@@ -293,7 +293,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-7 text-stone-500 fill-none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                 </svg>
-                <input  type="search" class="w-full outline-none text-[18px]" placeholder="اینجا استایل گردی کنید">
+                <input  type="search" class="w-full outline-none text-[16px]" placeholder="اینجا استایل گردی کنید">
     </form>
 <!-- slider -->
     <div class="swiper mySwiper relative">
